--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "windows",
-  "version": "1.0.0",
+  "name": "vuindows",
+  "version": "1.1.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
