--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "dev": "cross-env NODE_ENV=development webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "cross-env NODE_ENV=development webpack --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "production": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "generate-demo": "generateDemo.js"
   },
@@ -15,14 +14,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "fecha": "^2.3.1",
     "fs-extra": "^7.0.1",
     "laravel-mix": "^2.1.14",
-    "lodash": "^4.17.11",
-    "vue": "^2.5.22",
+    "lodash": "^4.17.15",
+    "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.10",
     "vue-clickaway": "^2.1.0",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.1"
   },
   "dependencies": {
     "js-video-url-parser": "^0.2.8",
