--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vuex": "^3.1.1"
   },
   "dependencies": {
+    "interactjs": "^1.10.11",
     "js-video-url-parser": "^0.2.8",
     "query-string": "^5.0.1",
     "sass": "^1.32.13",
