--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v1
       with:
-        path: ./dist
+        path: ./
     
   # Deployment job
   deploy:
